# sqlx-stuck

./: .env  Cargo.toml  init.sql
src/: cert.pem  cloud_cert.pem  error.rs  key.pem  main.rs
