[package]
name = "sqlx-stuck"
version = "0.1.0"
authors = ["司芳源 <sify1221@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = {version = "0.5", default-features = false,  features = ["macros", "runtime-actix-native-tls", "postgres", "chrono", "json"]}
native-tls = { version = "0.2", features = ["vendored"] }
actix-web = { version = "4.0.0-beta.5", features = ["rustls"] }
tokio = { version = "1", features = ["sync", "macros", "rt"] }
log = "0.4"
env_logger = "0.8"
rustls = { version = "0.19", features = ["dangerous_configuration"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0"
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
